# rag_tannlege

./: .gitignore  CLAUDE.md  Chat.py  README.md  chat.py  ingest.py  pyproject.toml
.streamlit/: config.toml
data/: clinic_discovery.yaml  clinics.csv  helsesmart_targets.yaml  prices_canonical_long.csv  single_clinics_oslo.txt  single_clinics_unmatched.txt  single_clinics_urls.yaml  transform_coverage_report.md  treatments_canonical.yaml  treatments_observed.yaml
data/single_clinics_extracted/: blid.json  clear_tannlegesenter.json  dentalia.json  majorstua_tannlegene.json  nordstrand_tannlegesenter.json  nydalen_tannlegesenter.json  oralcare.json  orbdent.json  oslo_tannlegesenter.json  sentrum_tannlegesenter.json  slemdal_tannlegesenter.json  smil_tannlegesenter.json  tann_og_kjeve.json  tanntunet.json  toyen_tannlegevakt.json
docs/: docs.yaml  scraper-design-decisions.md
docs/agents/: domain.md
pages/: 01_Priser.py  01_Priser_-_Peers.py  02_Priser_uavhengige.py
scraper/: __main__.py  cli.py  config.py  fetch.py  log.py  manifest.py  output.py  prisformat.py  slug.py
tannhelse/: chunking.py  config.py  docs_yaml.py  embedding.py  llm.py  parsing.py  prompts.py  retrieval.py  store.py
tests/: test_chunking.py  test_docs_yaml.py  test_parsing.py  test_priser_page.py  test_prompts.py  test_retrieval.py
tools/: canonical_diff.py  discover_colosseum.py  discover_odontia.py  discover_oris.py  discover_single_clinics.py  extract_single_clinics.py  populate_forventet_min_rader.py  transform_to_canonical.py  validate_scrape.py  visual_check.py
(+54 files in other folders)
