[project]
name = "tannhelse"
version = "0.1.0"
description = "Local RAG for Norwegian dental-sector regulatory research"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.40",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "selectolax>=0.3",
    "sqlite-vec>=0.1.6",
    "streamlit>=1.36",
    "tiktoken>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tannhelse", "scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
